--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.0.11",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-cli": "^5.6.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -25,8 +27,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "react-navigation": "^4.4.4",
-    "expo-linear-gradient": "~11.3.0"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
