--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
+    "@rneui/base": "^4.0.0-rc.5",
+    "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-cli": "^5.6.0",
@@ -23,7 +25,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
