--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-router-flux": "^4.3.1",
-    "react-native-safe-area-context": "^4.2.4",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-select-dropdown": "^2.0.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "@react-native-masked-view/masked-view": "0.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
