--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
@@ -28,6 +29,7 @@
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-slider": "^2.0.3",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-router-flux": "^4.3.1",
