--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
@@ -38,8 +39,9 @@
     "react-native-select-dropdown": "^2.0.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "react-navigation": "^4.4.4",
-    "@react-native-masked-view/masked-view": "0.2.6"
+    "react-native-webview": "^11.23.0",
+    "react-native-youtube-iframe": "^2.2.2",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
